added pets loop and domstrings to main js file

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
   <h1>Pet Adoption</h1>
+  <ul class="pet-buttons">
+    <li class="dog">Dogs</li>
+    <li class="cat">Cats</li>
+    <li class="birds">Birds</li>
+  </ul>
+  <div id="pet-adopt"></div>
   <script src="./main.js"></script>
 </body>
 </html>
