--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pet Adoption</title>
-  <link rel="stylesheet" hef="./main.css">
+  <link rel="stylesheet" href="./main.css">
 </head>
 <body>
   <h1>Pet Adoption</h1>
@@ -13,7 +13,7 @@
     <li class="cat">Cats</li>
     <li class="birds">Birds</li>
   </ul>
-  <div id="pet-adopt"></div>
+    <div id="pet-adopt"></div>
   <script src="./main.js"></script>
 </body>
 </html>
