tried to do events buttons

--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 </head>
 <body>
   <h1>Pet Adoption</h1>
-  <ul class="pet-buttons">
-    <li class="dog">Dogs</li>
-    <li class="cat">Cats</li>
-    <li class="birds">Birds</li>
-  </ul>
+  <button id="all">All Pets</button>
+  <button id="dog">Dogs</button>
+  <button id="cat">Cats</button>
+  <button id="bird">Birds</button>
     <div id="pet-adopt"></div>
   <script src="./main.js"></script>
 </body>
